--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnePunchMAnDOM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="Assets/script.js"> </script>
+
 </head>
 <body>
-    <div class="caja1 container" style="background-color: aquamarine; padding: 80;">
-        <div id="text1" onmouseover="mostrarText()" onmouseout="ocultarText()">
+    <div class="caja1 container" style="background-color: aquamarine; padding: 10px;">
+        <div id="text1" onmouseover="mostrarMsj()" onmouseout="ocultarMsj()">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
         </div>
     </div>
 
-    <div id="caja2" ondblclick="agrandarTexto()">
-        <div id="text2" style="background-color: yellowgreen; padding: 100">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
+    <div id="caja2" ondblclick="agrandarMsj()">
+        <div id="text2" style="background-color: yellowgreen; padding: 10px;" onmouseover="mostrarMsj() " >  
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>   
         </div>
     </div>
 
@@ -28,7 +31,6 @@
         </div>
     </div>
 
-    <script src="Assets/script.js"> </script>
 </body>
 </html>
 
